--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
+    "express-handlebars": "^6.0.6",
     "mongoose": "^6.7.2",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/nodemailer": "^6.4.6"
   }
 }
